[package]
name = "wasm64-demo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ['guest']

[dependencies]
anyhow = "1.0"
wasmparser = "0.81"
# At the time of this writing 0.31 is the latest release but doesn't have
# the `static_memory_forced` API which is used here, so use git.
wasmtime = { git = 'https://github.com/bytecodealliance/wasmtime' }
wat = "1.0"
